Sources/Rc2Parser/generated/RParser.swift
// Generated from R.g4 by ANTLR 4.7.2
import Antlr4

open class RParser: Parser {

	internal static var _decisionToDFA: [DFA] = {
          var decisionToDFA = [DFA]()
          let length = RParser._ATN.getNumberOfDecisions()
          for i in 0..<length {
            decisionToDFA.append(DFA(RParser._ATN.getDecisionState(i)!, i))
           }
           return decisionToDFA
     }()

	internal static let _sharedContextCache = PredictionContextCache()

	public
	enum Tokens: Int {
		case EOF = -1, HEX = 1, INT = 2, FLOAT = 3, COMPLEX = 4, STRING = 5, ID = 6, 
                 IF = 7, ELSE = 8, REPEAT = 9, WHILE = 10, FOR = 11, IN = 12, 
                 BREAK = 13, NEXT = 14, FUNCTION = 15, AND_OP = 16, PAR_OPEN = 17, 
                 PAR_CLOSE = 18, BRA_OPEN = 19, BRA_CLOSE = 20, DBRA_OPEN = 21, 
                 DBRA_CLOSE = 22, BRC_OPEN = 23, BRC_CLOSE = 24, QMARK = 25, 
                 PLUS = 26, MINUS = 27, ASTERICK = 28, SLASH = 29, LT = 30, 
                 LTE = 31, GT = 32, GTE = 33, EQUAL_OP = 34, NOTEQUAL_OP = 35, 
                 NOT = 36, PERCENT = 37, HASH = 38, BAR = 39, DBAR = 40, 
                 AMP = 41, DAMP = 42, COLEQ = 43, ASSIGN = 44, DASSIGN = 45, 
                 RASSIGN = 46, DRASSIGN = 47, EQ_CHAR = 48, TRIPLE_COLON = 49, 
                 DOUBLE_COLON = 50, COLON = 51, DOLLAR_CHAR = 52, AT_CHAR = 53, 
                 TILDE = 54, USCORE = 55, PERIOD = 56, SQUOTE = 57, DQUOTE = 58, 
                 TRIPLE_DOT = 59, COMMA = 60, BACKTICK = 61, SEMI = 62, 
                 CARAT = 63, NULL = 64, NaN = 65, TRUE = 66, FALSE = 67, 
                 NA = 68, INF = 69, USER_OP = 70, COMMENT = 71, NL = 72, 
                 WS = 73
	}

	public
	static let RULE_prog = 0, RULE_expr_or_assign = 1, RULE_expr = 2, RULE_exprlist = 3, 
            RULE_formlist = 4, RULE_form = 5, RULE_sublist = 6, RULE_sub = 7, 
            RULE_functionCall = 8, RULE_rcomparison = 9, RULE_assignOp = 10, 
            RULE_number = 11, RULE_rcomment = 12, RULE_keyword = 13

	public
	static let ruleNames: [String] = [
		"prog", "expr_or_assign", "expr", "exprlist", "formlist", "form", "sublist", 
		"sub", "functionCall", "rcomparison", "assignOp", "number", "rcomment", 
		"keyword"
	]

	private static let _LITERAL_NAMES: [String?] = [
		nil, nil, nil, nil, nil, nil, nil, "'if'", "'else'", "'repeat'", "'while'", 
		"'for'", "'in'", "'break'", "'next'", "'function'", nil, "'('", "')'", 
		"'['", "']'", "'[['", "']]'", "'{'", "'}'", "'?'", "'+'", "'-'", "'*'", 
		"'/'", "'<'", "'<='", "'>'", "'>='", "'=='", "'!='", "'!'", "'%'", "'#'", 
		"'|'", "'||'", "'&'", "'&&'", "':='", "'<-'", "'<<-'", "'->'", "'->>'", 
		"'='", "':::'", "'::'", "':'", "'$'", "'@'", "'~'", "'_'", "'.'", "'''", 
		"'\"'", "'...'", "','", "'`'", "';'", "'^'", "'NULL'", "'NaN'", "'TRUE'", 
		"'FALSE'", "'NA'", "'Inf'"
	]
	private static let _SYMBOLIC_NAMES: [String?] = [
		nil, "HEX", "INT", "FLOAT", "COMPLEX", "STRING", "ID", "IF", "ELSE", "REPEAT", 
		"WHILE", "FOR", "IN", "BREAK", "NEXT", "FUNCTION", "AND_OP", "PAR_OPEN", 
		"PAR_CLOSE", "BRA_OPEN", "BRA_CLOSE", "DBRA_OPEN", "DBRA_CLOSE", "BRC_OPEN", 
		"BRC_CLOSE", "QMARK", "PLUS", "MINUS", "ASTERICK", "SLASH", "LT", "LTE", 
		"GT", "GTE", "EQUAL_OP", "NOTEQUAL_OP", "NOT", "PERCENT", "HASH", "BAR", 
		"DBAR", "AMP", "DAMP", "COLEQ", "ASSIGN", "DASSIGN", "RASSIGN", "DRASSIGN", 
		"EQ_CHAR", "TRIPLE_COLON", "DOUBLE_COLON", "COLON", "DOLLAR_CHAR", "AT_CHAR", 
		"TILDE", "USCORE", "PERIOD", "SQUOTE", "DQUOTE", "TRIPLE_DOT", "COMMA", 
		"BACKTICK", "SEMI", "CARAT", "NULL", "NaN", "TRUE", "FALSE", "NA", "INF", 
		"USER_OP", "COMMENT", "NL", "WS"
	]
	public
	static let VOCABULARY = Vocabulary(_LITERAL_NAMES, _SYMBOLIC_NAMES)

	override open
	func getGrammarFileName() -> String { return "R.g4" }

	override open
	func getRuleNames() -> [String] { return RParser.ruleNames }

	override open
	func getSerializedATN() -> String { return RParser._serializedATN }

	override open
	func getATN() -> ATN { return RParser._ATN }


	override open
	func getVocabulary() -> Vocabulary {
	    return RParser.VOCABULARY
	}

	override public
	init(_ input:TokenStream) throws {
	    RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION)
		try super.init(input)
		_interp = ParserATNSimulator(self,RParser._ATN,RParser._decisionToDFA, RParser._sharedContextCache)
	}


	public class ProgContext: ParserRuleContext {
			open
			func EOF() -> TerminalNode? {
				return getToken(RParser.Tokens.EOF.rawValue, 0)
			}
			open
			func expr_or_assign() -> [Expr_or_assignContext] {
				return getRuleContexts(Expr_or_assignContext.self)
			}
			open
			func expr_or_assign(_ i: Int) -> Expr_or_assignContext? {
				return getRuleContext(Expr_or_assignContext.self, i)
			}
			open
			func NL() -> [TerminalNode] {
				return getTokens(RParser.Tokens.NL.rawValue)
			}
			open
			func NL(_ i:Int) -> TerminalNode? {
				return getToken(RParser.Tokens.NL.rawValue, i)
			}
			open
			func SEMI() -> [TerminalNode] {
				return getTokens(RParser.Tokens.SEMI.rawValue)
			}
			open
			func SEMI(_ i:Int) -> TerminalNode? {
				return getToken(RParser.Tokens.SEMI.rawValue, i)
			}
		override open
		func getRuleIndex() -> Int {
			return RParser.RULE_prog
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? RListener {
				listener.enterProg(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? RListener {
				listener.exitProg(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? RVisitor {
			    return visitor.visitProg(self)
			}
			else if let visitor = visitor as? RBaseVisitor {
			    return visitor.visitProg(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func prog() throws -> ProgContext {
		var _localctx: ProgContext = ProgContext(_ctx, getState())
		try enterRule(_localctx, 0, RParser.RULE_prog)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
			var _alt:Int
		 	try enterOuterAlt(_localctx, 1)
		 	setState(38)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (//closure
		 	 { () -> Bool in
		 	      var testSet: Bool = {  () -> Bool in
		 	   let testArray: [Int] = [_la, RParser.Tokens.HEX.rawValue,RParser.Tokens.INT.rawValue,RParser.Tokens.FLOAT.rawValue,RParser.Tokens.COMPLEX.rawValue,RParser.Tokens.STRING.rawValue,RParser.Tokens.ID.rawValue,RParser.Tokens.IF.rawValue,RParser.Tokens.ELSE.rawValue,RParser.Tokens.REPEAT.rawValue,RParser.Tokens.WHILE.rawValue,RParser.Tokens.FOR.rawValue,RParser.Tokens.IN.rawValue,RParser.Tokens.BREAK.rawValue,RParser.Tokens.NEXT.rawValue,RParser.Tokens.FUNCTION.rawValue,RParser.Tokens.PAR_OPEN.rawValue,RParser.Tokens.BRC_OPEN.rawValue,RParser.Tokens.QMARK.rawValue,RParser.Tokens.PLUS.rawValue,RParser.Tokens.MINUS.rawValue,RParser.Tokens.NOT.rawValue,RParser.Tokens.TILDE.rawValue]
		 	    return  Utils.testBitLeftShiftArray(testArray, 0)
		 	}()
		 	          testSet = testSet || {  () -> Bool in
		 	             let testArray: [Int] = [_la, RParser.Tokens.NULL.rawValue,RParser.Tokens.NaN.rawValue,RParser.Tokens.TRUE.rawValue,RParser.Tokens.FALSE.rawValue,RParser.Tokens.NA.rawValue,RParser.Tokens.INF.rawValue,RParser.Tokens.COMMENT.rawValue,RParser.Tokens.NL.rawValue]
		 	              return  Utils.testBitLeftShiftArray(testArray, 64)
		 	          }()
		 	      return testSet
		 	 }()) {
		 		setState(36)
		 		try _errHandler.sync(self)
		 		switch (RParser.Tokens(rawValue: try _input.LA(1))!) {
		 		case .HEX:fallthrough
		 		case .INT:fallthrough
		 		case .FLOAT:fallthrough
		 		case .COMPLEX:fallthrough
		 		case .STRING:fallthrough
		 		case .ID:fallthrough
		 		case .IF:fallthrough
		 		case .ELSE:fallthrough
		 		case .REPEAT:fallthrough
		 		case .WHILE:fallthrough
		 		case .FOR:fallthrough
		 		case .IN:fallthrough
		 		case .BREAK:fallthrough
		 		case .NEXT:fallthrough
		 		case .FUNCTION:fallthrough
		 		case .PAR_OPEN:fallthrough
		 		case .BRC_OPEN:fallthrough
		 		case .QMARK:fallthrough
		 		case .PLUS:fallthrough
		 		case .MINUS:fallthrough
		 		case .NOT:fallthrough
		 		case .TILDE:fallthrough
		 		case .NULL:fallthrough
		 		case .NaN:fallthrough
		 		case .TRUE:fallthrough
		 		case .FALSE:fallthrough
		 		case .NA:fallthrough
		 		case .INF:fallthrough
		 		case .COMMENT:
		 			setState(28)
		 			try expr_or_assign()
		 			setState(32)
		 			try _errHandler.sync(self)
		 			_alt = try getInterpreter().adaptivePredict(_input,0,_ctx)
		 			while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
		 				if ( _alt==1 ) {
		 					setState(29)
		 					_la = try _input.LA(1)
		 					if (!(//closure
		 					 { () -> Bool in
		 					      let testSet: Bool = _la == RParser.Tokens.SEMI.rawValue || _la == RParser.Tokens.NL.rawValue
		 					      return testSet
		 					 }())) {
		 					try _errHandler.recoverInline(self)
		 					}
		 					else {
		 						_errHandler.reportMatch(self)
		 						try consume()
		 					}

		 			 
		 				}
		 				setState(34)
		 				try _errHandler.sync(self)
		 				_alt = try getInterpreter().adaptivePredict(_input,0,_ctx)
		 			}

		 			break

		 		case .NL:
		 			setState(35)
		 			try match(RParser.Tokens.NL.rawValue)

		 			break
		 		default:
		 			throw ANTLRException.recognition(e: NoViableAltException(self))
		 		}

		 		setState(40)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}
		 	setState(41)
		 	try match(RParser.Tokens.EOF.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class Expr_or_assignContext: ParserRuleContext {
		override open
		func getRuleIndex() -> Int {
			return RParser.RULE_expr_or_assign
		}
	}
	public class AssignmentContext: Expr_or_assignContext {
			open
			func expr() -> ExprContext? {
				return getRuleContext(ExprContext.self, 0)
			}
			open
			func assignOp() -> AssignOpContext? {
				return getRuleContext(AssignOpContext.self, 0)
			}
			open
			func expr_or_assign() -> Expr_or_assignContext? {
				return getRuleContext(Expr_or_assignContext.self, 0)
			}

		public
		init(_ ctx: Expr_or_assignContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? RListener {
				listener.enterAssignment(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? RListener {
				listener.exitAssignment(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? RVisitor {
			    return visitor.visitAssignment(self)
			}
			else if let visitor = visitor as? RBaseVisitor {
			    return visitor.visitAssignment(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public class SingleExpContext: Expr_or_assignContext {
			open
			func expr() -> ExprContext? {
				return getRuleContext(ExprContext.self, 0)
			}

		public
		init(_ ctx: Expr_or_assignContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? RListener {
				listener.enterSingleExp(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? RListener {
				listener.exitSingleExp(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? RVisitor {
			    return visitor.visitSingleExp(self)
			}
			else if let visitor = visitor as? RBaseVisitor {
			    return visitor.visitSingleExp(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func expr_or_assign() throws -> Expr_or_assignContext {
		var _localctx: Expr_or_assignContext = Expr_or_assignContext(_ctx, getState())
		try enterRule(_localctx, 2, RParser.RULE_expr_or_assign)
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(48)
		 	try _errHandler.sync(self)
		 	switch(try getInterpreter().adaptivePredict(_input,3, _ctx)) {
		 	case 1:
		 		_localctx =  AssignmentContext(_localctx);
		 		try enterOuterAlt(_localctx, 1)
		 		setState(43)
		 		try expr(0)
		 		setState(44)
		 		try assignOp()
		 		setState(45)
		 		try expr_or_assign()

		 		break
		 	case 2:
		 		_localctx =  SingleExpContext(_localctx);
		 		try enterOuterAlt(_localctx, 2)
		 		setState(47)
		 		try expr(0)

		 		break
		 	default: break
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}


	public class ExprContext: ParserRuleContext {
		override open
		func getRuleIndex() -> Int {
			return RParser.RULE_expr
		}
	}
	public class WhileLoopContext: ExprContext {
			open
			func WHILE() -> TerminalNode? {
				return getToken(RParser.Tokens.WHILE.rawValue, 0)
			}
			open
			func PAR_OPEN() -> TerminalNode? {
				return getToken(RParser.Tokens.PAR_OPEN.rawValue, 0)
			}
			open
			func expr() -> [ExprContext] {
				return getRuleContexts(ExprContext.self)
			}
			open
			func expr(_ i: Int) -> ExprContext? {
				return getRuleContext(ExprContext.self, i)
			}
			open
			func PAR_CLOSE() -> TerminalNode? {
				return getToken(RParser.Tokens.PAR_CLOSE.rawValue, 0)
			}

		public
		init(_ ctx: ExprContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? RListener {
				listener.enterWhileLoop(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? RListener {
				listener.exitWhileLoop(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? RVisitor {
			    return visitor.visitWhileLoop(self)
			}
			else if let visitor = visitor as? RBaseVisitor {
			    return visitor.visitWhileLoop(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public class HelpRequestContext: ExprContext {
			open
			func QMARK() -> TerminalNode? {
				return getToken(RParser.Tokens.QMARK.rawValue, 0)
			}
			open
			func expr() -> ExprContext? {
				return getRuleContext(ExprContext.self, 0)
			}

		public
		init(_ ctx: ExprContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? RListener {
				listener.enterHelpRequest(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? RListener {
				listener.exitHelpRequest(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? RVisitor {
			    return visitor.visitHelpRequest(self)
			}
			else if let visitor = visitor as? RBaseVisitor {
			    return visitor.visitHelpRequest(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public class RepeatLoopContext: ExprContext {
			open
			func REPEAT() -> TerminalNode? {
				return getToken(RParser.Tokens.REPEAT.rawValue, 0)
			}
			open
			func expr() -> ExprContext? {
				return getRuleContext(ExprContext.self, 0)
			}

		public
		init(_ ctx: ExprContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? RListener {
				listener.enterRepeatLoop(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? RListener {
				listener.exitRepeatLoop(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? RVisitor {
			    return visitor.visitRepeatLoop(self)
			}
			else if let visitor = visitor as? RBaseVisitor {
			    return visitor.visitRepeatLoop(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public class ExpTildeExpContext: ExprContext {
			open
			func expr() -> [ExprContext] {
				return getRuleContexts(ExprContext.self)
			}
			open
			func expr(_ i: Int) -> ExprContext? {
				return getRuleContext(ExprContext.self, i)
			}
			open
			func TILDE() -> TerminalNode? {
				return getToken(RParser.Tokens.TILDE.rawValue, 0)
			}

		public
		init(_ ctx: ExprContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? RListener {
				listener.enterExpTildeExp(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? RListener {
				listener.exitExpTildeExp(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? RVisitor {
			    return visitor.visitExpTildeExp(self)
			}
			else if let visitor = visitor as? RBaseVisitor {
			    return visitor.visitExpTildeExp(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public class ListExpContext: ExprContext {
			open
			func PAR_OPEN() -> TerminalNode? {
				return getToken(RParser.Tokens.PAR_OPEN.rawValue, 0)
			}
			open
			func expr() -> ExprContext? {
				return getRuleContext(ExprContext.self, 0)
			}
			open
			func PAR_CLOSE() -> TerminalNode? {
				return getToken(RParser.Tokens.PAR_CLOSE.rawValue, 0)
			}

		public
		init(_ ctx: ExprContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? RListener {
				listener.enterListExp(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? RListener {
				listener.exitListExp(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? RVisitor {
			    return visitor.visitListExp(self)
			}
			else if let visitor = visitor as? RBaseVisitor {
			    return visitor.visitListExp(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public class DescendantContext: ExprContext {
			open
			func expr() -> [ExprContext] {
				return getRuleContexts(ExprContext.self)
			}
			open
			func expr(_ i: Int) -> ExprContext? {
				return getRuleContext(ExprContext.self, i)
			}
			open
			func DOUBLE_COLON() -> TerminalNode? {
				return getToken(RParser.Tokens.DOUBLE_COLON.rawValue, 0)
			}
			open
			func TRIPLE_COLON() -> TerminalNode? {
				return getToken(RParser.Tokens.TRIPLE_COLON.rawValue, 0)
			}

		public
		init(_ ctx: ExprContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? RListener {
				listener.enterDescendant(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? RListener {
				listener.exitDescendant(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? RVisitor {
			    return visitor.visitDescendant(self)
			}
			else if let visitor = visitor as? RBaseVisitor {
			    return visitor.visitDescendant(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public class HouseContext: ExprContext {
			open
			func expr() -> [ExprContext] {
				return getRuleContexts(ExprContext.self)
			}
			open
			func expr(_ i: Int) -> ExprContext? {
				return getRuleContext(ExprContext.self, i)
			}
			open
			func CARAT() -> TerminalNode? {
				return getToken(RParser.Tokens.CARAT.rawValue, 0)
			}

		public
		init(_ ctx: ExprContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? RListener {
				listener.enterHouse(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? RListener {
				listener.exitHouse(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? RVisitor {
			    return visitor.visitHouse(self)
			}
			else if let visitor = visitor as? RBaseVisitor {
			    return visitor.visitHouse(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public class ListRefContext: ExprContext {
			open
			func expr() -> ExprContext? {
				return getRuleContext(ExprContext.self, 0)
			}
			open
			func DBRA_OPEN() -> TerminalNode? {
				return getToken(RParser.Tokens.DBRA_OPEN.rawValue, 0)
			}
			open
			func sublist() -> SublistContext? {
				return getRuleContext(SublistContext.self, 0)
			}
			open
			func BRA_CLOSE() -> [TerminalNode] {
				return getTokens(RParser.Tokens.BRA_CLOSE.rawValue)
			}
			open
			func BRA_CLOSE(_ i:Int) -> TerminalNode? {
				return getToken(RParser.Tokens.BRA_CLOSE.rawValue, i)
			}

		public
		init(_ ctx: ExprContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? RListener {
				listener.enterListRef(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? RListener {
				listener.exitListRef(self)
			}
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? RVisitor {
			    return visitor.visitListRef(self)
			}
			else if let visitor = visitor as? RBaseVisitor {
			    return visitor.visitListRef(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public class MulDivContext: ExprContext {
			open
			func expr() -> [ExprContext] {
				return getRuleContexts(ExprContext.self)
			}
			open
			func expr(_ i: Int) -> ExprContext? {
				return getRuleContext(ExprContext.self, i)
			}
			open
			func ASTERICK() -> TerminalNode? {
				return getToken(RParser.Tokens.ASTERICK.rawValue, 0)
			}
			open
			func SLASH() -> TerminalNode? {
				return getToken(RParser.Tokens.SLASH.rawValue, 0)
			}
